--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "cha-ching-app",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node":"16.16.0"
+  },
   "dependencies": {
     "@material-ui/core": "^4.12.4",
     "@testing-library/jest-dom": "^5.16.5",
